--- a/pom.xml
+++ b/pom.xml
@@ -139,11 +139,18 @@
 			<artifactId>selenium-java</artifactId>
 			<version>4.20.0</version> <!-- 또는 최신 버전 -->
 		</dependency>
-		
+
 		<!-- 파일 데이터 넣기 @Lob 의존성  -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+
+		<!-- 네이버 크롤링 title <b>태그 제거용 -->
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.17.2</version>
 		</dependency>
 
 	</dependencies>
